# hackaton

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  ml_web_colab.ipynb  pyproject.toml
alembic/: env.py
alembic/versions/: af27c5d5ed93_initial_migration.py
backend/app/: config.py  database.py  entity_extractor.py  feedback.py  main.py  model.py  reports.py  schemas.py  stats.py
ml/: compare_models.py  evaluate_model.py  train_baseline.py  train_transformer.py
scripts/: README.md  deploy.ps1  deploy.py  deploy.sh  docker-entrypoint.sh
