[project]
name = "ml-web-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "datasets==2.19.1",
    "evaluate==0.4.2",
    "fastapi==0.111.0",
    "joblib==1.4.2",
    "natasha>=1.6.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic-settings>=2.12.0",
    "scikit-learn==1.4.2",
    "sqlalchemy==2.0.25",
    "torch==2.2.2",
    "transformers[torch]==4.40.1",
    "uvicorn[standard]==0.30.0",
]
